gccida/c2/scan_rtx_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:860:41: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:860:55: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:860:76: error: must use 'enum' tag to refer to type 'op_type'
void  scan_rtx_reg( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                                           ^
                                                                           enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:863:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v8; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:886:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v32; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:887:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v33; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:892:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v38; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:900:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v46; // [rsp+8h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:915:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( mode_class_0[v13] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:986:35: error: must use 'enum' tag to refer to type 'mode_class'
v29 = ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v26 >> 14) & 0x3FC)) - 5) < 2) + 1; 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/regrename.c:986:59: error: use of undeclared identifier 'mode_class_0'
v29 = ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v26 >> 14) & 0x3FC)) - 5) < 2) + 1; 
                                                          ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/scan_rtx_reg/src/obj/regrename.o] Error 1
